<resources>
    <string name="app_name">Dashboard Design</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="search">Search</string>
    <string name="resident_evil_the_final_chapter">Resident Evil - The Final Chapter</string>
    <string name="december_14_2016">December 14, 2016</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">View All</string>
</resources>