<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_category"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_label" />

    <TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/science_fiction"
        android:textColor="@color/primary_label"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_category"
        app:layout_constraintStart_toEndOf="@id/image_category"
        app:layout_constraintTop_toTopOf="@id/image_category" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_notifications"
        app:tint="@color/secondary_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/image_category">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_search"
            app:tint="@color/primary_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@null"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/primary_label"
            android:textColorHint="@color/secondary_label"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_recommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@id/smooth_bottom_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_recommended_movie"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/bali"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_recommended_movie"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/resident_evil_the_final_chapter"
                    android:textColor="@color/primary_label"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/science_fiction"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_11ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/december_14_2016"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_10ssp"/>

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.5" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/background_favorite"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_favorite"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/text_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/recommended"
        android:textColor="@color/primary_label"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card_recommended"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:src="@drawable/ic_arrow_down"
        app:tint="@color/primary_label"
        app:layout_constraintBottom_toBottomOf="@id/text_category"
        app:layout_constraintStart_toEndOf="@id/text_category"
        app:layout_constraintTop_toTopOf="@id/text_category" />

    <TextView
        android:id="@+id/text_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/view_all"
        android:textColor="@color/secondary_label"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/text_recommended"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_recommended" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/movie_viewpager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        app:layout_constraintBottom_toTopOf="@id/text_recommended"
        app:layout_constraintTop_toBottomOf="@id/layout_search" />


    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/smooth_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:backgroundColor="@color/background"
        app:iconSize="@dimen/_18sdp"
        app:iconTint="@color/bottom_bar_icon_tint"
        app:iconTintActive="@color/bottom_bar_icon_tint_active"
        app:indicatorColor="@color/bottom_bar_indicator_color"
        app:indicatorRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation"
        app:textColor="@color/bottom_bar_text_color"
        app:textSize="@dimen/_10ssp" />



</androidx.constraintlayout.widget.ConstraintLayout>